# little-big-hero-backend

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3e7cb4a4d8aa_add_quests_id_uuid.py  6b514245334c_add_quest_status_enum.py  7e9a746031d1_update_quest_status.py  a1c131cd7162_initial_migration.py  b032bde1e17f_add_blob_to_items_and_latitude_and_.py
app/: main.py
app/api/repositories/: avatar.py  item.py  quest.py  user.py
app/api/routers/: avatar.py  item.py  quest.py  user.py
app/api/services/: avatar.py  item.py  quest.py  user.py
app/core/: config.py  database.py  logger.py
app/models/: __init__.py  avatar.py  item.py  quest.py  user.py
app/schemas/: avatar.py  item.py  quest.py  user.py
